# USTC_CG

./: .gitignore  AGENTS.md  opencode.json
Assets/: Results.usd  stage.usdc
Framework2D/: HW2.tex  HW3.tex  main.tex
Framework2D/diagrams/: 1_MiniDraw.puml
Framework2D/src/assignments/1_MiniDraw/: canvas_widget.cpp  canvas_widget.h  minidraw_window.cpp  minidraw_window.h
Framework2D/src/assignments/1_MiniDraw/shapes/: ellipse.cpp  ellipse.h  freehand.cpp  freehand.h  line.cpp  line.h  polygon.cpp  polygon.h  rect.cpp  rect.h  shape.h
Framework2D/src/assignments/2_ImageWarping/: CMakeLists.txt  warping_widget.cpp  warping_widget.h  warping_window.cpp
Framework2D/src/assignments/2_ImageWarping/warper/: Dlib_warper.cpp  Dlib_warper.h  IDW_warper.cpp  IDW_warper.h  RBF_warper.cpp  warper.h
Framework2D/src/assignments/3_PoissonImageEditing/: CMakeLists.txt  poisson_window.cpp  target_image_widget.cpp  target_image_widget.h
Framework2D/src/common/: window.cpp
Framework2D/src/demo/: demo_hello_world.cpp
FrameworkDDPM/: HW_4.tex  dataloader.py  forward_noising.py  patch.py  sampling.py  training_model.py
Homeworks/0_cpp_warmup/project/: CMakeLists.txt  LICENSE  README.md
Homeworks/0_cpp_warmup/project/cmake/: helper.cmake
Homeworks/0_cpp_warmup/project/include/: PolynomialList.h  PolynomialMap.h
Homeworks/0_cpp_warmup/project/learn_STL/: list  list.cpp  map.cpp  vector  vector.cpp
Homeworks/0_cpp_warmup/project/src/: CMakeLists.txt
Homeworks/0_cpp_warmup/project/src/executables/: CMakeLists.txt
Homeworks/0_cpp_warmup/project/src/executables/1_BasicDArray/: CMakeLists.txt  DArray.cpp  DArray.h  my_DArray_error.md
Homeworks/0_cpp_warmup/project/src/executables/2_EfficientDArray/: CMakeLists.txt  DArray.h  main.cpp  my_DArray_error.md
Homeworks/0_cpp_warmup/project/src/executables/3_TemplateDArray/: CMakeLists.txt  DArray.h  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/4_list_Polynomial/: CMakeLists.txt  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/5_map_Polynomial/: CMakeLists.txt  TestPolynomial.h  test.cpp
Homeworks/0_cpp_warmup/project/src/libraries/: CMakeLists.txt
Homeworks/0_cpp_warmup/project/src/libraries/shared/: CMakeLists.txt  PolynomialList.cpp
Homeworks/0_cpp_warmup/project/src/libraries/static/: CMakeLists.txt  PolynomialMap.cpp
Homeworks/5_tutte_parametrzation/data/meshes/: Balls.usda  BunnyHead.usda  David328.usda  NefertitiFace.usda
Homeworks/5_tutte_parametrzation/documents/: report.md
Homeworks/5_tutte_parametrzation/pdf/: Results.usd  report.tex
